testsuite/poke.pkl/continue-diag-1.pk
/* { dg-do compile } */

fun foo = void:
    {
      continue; /* { dg-error "containing" } */
    }
